--- a/modules/ROOT/pages/autocompleter.adoc
+++ b/modules/ROOT/pages/autocompleter.adoc
@@ -1,6 +1,6 @@
 = Autocompleter
 :navtitle: Autocompleter
-:description: Add a custom autocompleter to TinyMCE 6.
+:description: Add a custom autocompleter to {productname} {productmajorversion}.
 :keywords: autocomplete
 
 == Overview
