--- a/modules/ROOT/pages/contextform.adoc
+++ b/modules/ROOT/pages/contextform.adoc
@@ -1,6 +1,6 @@
 = Context forms
 :navtitle: Context forms
-:description: Creating custom context forms for TinyMCE 6
+:description: Creating custom context forms for {productname} {productmajorversion}
 :keywords: contextforms, context forms, contextformsbarapi
 :contextItemType: form
 
