--- a/modules/ROOT/pages/contextmenu.adoc
+++ b/modules/ROOT/pages/contextmenu.adoc
@@ -1,6 +1,6 @@
 = Context menus
 :navtitle: Context menus
-:description: Creating custom context menus for TinyMCE 6
+:description: Creating custom context menus for {productname} {productmajorversion}
 :keywords: contextmenu, context menu, contextmenuapi
 
 The context menu is a configurable component that appears when the user right clicks in the editable area. By default it does not disable the operating system's native context menu, if there are no items to display at the cursor position the native context menu will be shown.
