--- a/modules/ROOT/pages/contexttoolbar.adoc
+++ b/modules/ROOT/pages/contexttoolbar.adoc
@@ -1,6 +1,6 @@
 = Context toolbar
 :navtitle: Context toolbar
-:description: Creating custom context toolbars for TinyMCE 6
+:description: Creating custom context toolbars for {productname} {productmajorversion}
 :keywords: contexttoolbar, context toolbar, contexttoolbarapi
 :contextItemType: toolbar
 
