--- a/modules/ROOT/pages/custom-toolbarbuttons.adoc
+++ b/modules/ROOT/pages/custom-toolbarbuttons.adoc
@@ -1,6 +1,6 @@
 = Toolbar buttons
 :navtitle: Toolbar buttons
-:description: Add a custom buttons to the TinyMCE 6 toolbar.
+:description: Add a custom buttons to the {productname} {productmajorversion} toolbar.
 :keywords: toolbar, toolbarbuttons, buttons, toolbarbuttonsapi
 
 == Use cases
