--- a/modules/ROOT/pages/shortcuts.adoc
+++ b/modules/ROOT/pages/shortcuts.adoc
@@ -1,6 +1,6 @@
 = Custom Keyboard Shortcuts
 :navtitle: Keyboard Shortcuts
-:description: How-to add custom keyboard shortcuts to TinyMCE 6.
+:description: How-to add custom keyboard shortcuts to {productname} {productmajorversion}.
 :keywords: shortcuts, shortcut, custom, keyboard
 
 IMPORTANT: Adding a custom shortcut with a keyboard combination that conflicts with an existing {productname} or browser shortcut will override the existing shortcut.
