--- a/-new-material-templates/release-notes-template/ROOT/nav.adoc
+++ b/-new-material-templates/release-notes-template/ROOT/nav.adoc
@@ -1,7 +1,7 @@
 // The following two lines are already extant in `nav.adoc` and are here as a guidepost.
 // The new navigation material is added immediately below these lines.
 * Release information
-** xref:release-notes.adoc[Release notes for TinyMCE 6]
+** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
 // Remove un-used-for-this-particular-release entries.
 *** TinyMCE <x.y[.z]>
 **** xref:<x.y[.z]>-release-notes.adoc#overview[Overview]
